--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+
+
 * {
   margin: 0;
   padding: 0;
@@ -6,4 +17,5 @@
 body {
   overflow-x: hidden;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
