--- a/src/Component/Sidebar/sidebar.css
+++ b/src/Component/Sidebar/sidebar.css
@@ -74,3 +74,9 @@
 .optName svg {
   font-size: 1.8rem;
 }
+
+@media only screen and (max-width:560px) {
+  .sidebar-min-width {
+    width: 100%
+  }
+}
