--- a/src/Component/Popup/Popup.css
+++ b/src/Component/Popup/Popup.css
@@ -1,6 +1,6 @@
 /* From Uiverse.io by Harsha2lucky */
 .singinContainer {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     background: #e6e7ed;
@@ -109,6 +109,7 @@
     align-items: center;
     gap: 10px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .sign-up p {
@@ -187,4 +188,11 @@
 .btn-singin:hover svg {
     transform: scale(0.9);
     fill: #333333;
+}
+
+@media only screen and (max-width:640px) {
+    .content {
+        width: 70%;
+        padding: 40px;
+    }
 }
