--- a/src/Component/Banner/banner.css
+++ b/src/Component/Banner/banner.css
@@ -14,8 +14,8 @@
 .imageContainer {
     border-radius: 76% 24% 70% 30% / 47% 73% 27% 53%;
     box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
-    background: #e8e8e8;
-    border: 1px solid #e8e8e8;
+    background: #ecf0f3;
+    border: 1px solid #ecf0f3;
     width: 414px;
     height: 414px;
     align-items: center;
@@ -51,7 +51,7 @@
     font-size: 2.2rem;
     font-weight: 500;
     font-family: Roboto;
-    color: #35425a;
+    color: #31344b;
 }
 
 .companyDesc p {
@@ -77,7 +77,7 @@
         width: 100%;
     }
 
-    .imageContainer{
+    .imageContainer {
         width: 300px;
         height: 300px;
     }
