--- a/src/Component/ProductDescCard/productDescCard.css
+++ b/src/Component/ProductDescCard/productDescCard.css
@@ -107,9 +107,9 @@
     min-width: 40px;
     margin: 0 5px;
     text-decoration: none;
-    width: 100%;
+    /* width: 100%; */
     border-radius: 20px;
-    padding: 0 5px;
+    padding: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
