--- a/src/Component/OrderCart/orderCart.css
+++ b/src/Component/OrderCart/orderCart.css
@@ -16,6 +16,12 @@
     flex-wrap: wrap;
     flex-direction: column;
     gap: 1rem;
+    justify-content: center;
+}
+
+.NoContent h1 {
+    font-size: 4rem;
+    opacity: 0.5;
 }
 
 .OrderSummary h1 {
@@ -69,11 +75,15 @@
 .OrderNow button {
     background: #ecf0f3;
     box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
-    cursor: initial;
     border: none;
     padding: 15px 30px;
-    cursor: pointer !important;
+    cursor: pointer;
     border-radius: 6px;
+}
+
+.inActiveOrderNow button {
+    cursor: not-allowed;
+    opacity: 0.4;
 }
 
 .OrderNow {
@@ -82,6 +92,6 @@
     justify-content: center;
 }
 
-.OrderNow button:hover {
+.activeOrderNow button:hover {
     background-color: #e6eaed;
 }
