--- a/src/Component/CookiesPopUp/cookies.css
+++ b/src/Component/CookiesPopUp/cookies.css
@@ -7,6 +7,7 @@
       z-index: 100;
       background: #ebf0f3a6;
       backdrop-filter: blur(20px);
+      z-index: 100;
   }
 
   .cookiesContainer {
