--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -5,6 +5,10 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .menu {
@@ -60,6 +64,16 @@
     border: 1px solid #ecf0f3;
     border-radius: 0.5em;
     padding: 10px;
+    position: relative;
+}
+
+.cartIcon span {
+    position: absolute;
+    top: 1px;
+    font-size: 13px;
+    right: 3px;
+    font-weight: 500;
+    font-family: Roboto;
 }
 
 .cartIcon svg {
