--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   background: #ecf0f3;
   overflow-x: hidden;
   box-sizing: border-box;
+  /* font-family: "Nunito Sans", sans-serif; */
 }
 
 p,
