--- a/src/Component/ProductDescCard/productDescCard.css
+++ b/src/Component/ProductDescCard/productDescCard.css
@@ -1,16 +1,4 @@
-.PopUpCardsDesc {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #000000ba;
-    z-index: 100;
-    backdrop-filter: blur(10px);
-}
+.PopUpCardsDesc {}
 
 .productDescWrapper .wrapper,
 .productDescWrapper .wrapper .img-area,
