--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
   background: #ecf0f3;
   overflow-x: hidden;
   box-sizing: border-box;
-  /* font-family: "Nunito Sans", sans-serif; */
 }
 
 p,
@@ -31,4 +30,40 @@ li {
 
 a {
   text-decoration: none;
+}
+
+.PopUpCardsDescInactive {
+  transition: all 0.3s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.73);
+}
+
+.PopUpCardsDescActive {
+  transition: all 0.25s;
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.73);
 }
