--- a/src/Component/CookiesPopUp/cookies.css
+++ b/src/Component/CookiesPopUp/cookies.css
@@ -5,8 +5,8 @@
       left: 0;
       right: 0;
       z-index: 100;
-      background: #ebf0f3a6;
-      backdrop-filter: blur(20px);
+      background: #000000bd;
+      backdrop-filter: blur(13px);
       z-index: 100;
   }
 
@@ -22,7 +22,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
+      box-shadow: 3px 3px 60px #00000070;
       background-color: #ebf0f3;
       color: #000;
       text-align: center;
