--- a/src/Component/Popup/Popup.css
+++ b/src/Component/Popup/Popup.css
@@ -6,8 +6,8 @@
     left: 0;
     z-index: 100;
     width: 100%;
-    background: #ebf0f3bc;
-    backdrop-filter: blur(20px);
+    background: #000000bd;
+    backdrop-filter: blur(12px);
 }
 
 .content {
@@ -19,9 +19,7 @@
     padding: 60px;
     border-radius: 10px;
     background: #ecf0f3;
-    box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
-    background: #ecf0f3;
-    box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
+    box-shadow: 3px 3px 60px #00000070;
 }
 
 .content .text {
