--- a/src/Component/FoodCardHome/listFoodCard.css
+++ b/src/Component/FoodCardHome/listFoodCard.css
@@ -118,16 +118,29 @@
 
 .deleteItemIcon {
     position: absolute;
-    top: 20px;
+    bottom: 20px;
     right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    transition: 200ms;
+}
+
+.deleteItemIcon span {
+    font-size: 13px;
 }
 
 .deleteItemIcon svg {
-    font-size: 1.5rem;
+    font-size: 16px;
     transition: 200ms;
     color: #30344c;
 }
 
-.deleteItemIcon svg:hover {
-    color: #ed6755;
+.deleteItemIcon:hover {
+    color: #DA2C43;
+}
+
+.deleteItemIcon:hover svg {
+    color: #DA2C43;
 }
