--- a/src/index.css
+++ b/src/index.css
@@ -33,10 +33,9 @@ a {
 }
 
 .PopUpCardsDescInactive {
-  transition: all 0.2s ease-in-out;
+  transition: opacity 0.3s ease;
   visibility: hidden;
   opacity: 0;
-  transform: scale(0);
   position: fixed;
   z-index: 1;
   left: 0;
@@ -51,10 +50,8 @@ a {
 }
 
 .PopUpCardsDescActive {
-  transition: all 0.25s;
   visibility: visible;
   opacity: 1;
-  transform: scale(1);
   position: fixed;
   z-index: 100;
   left: 0;
@@ -66,4 +63,31 @@ a {
   height: 100%;
   backdrop-filter: blur(10px);
   background: rgba(0, 0, 0, 0.73);
+}
+
+.productDescWrapper{
+  animation: zoomIn 0.3s ease forwards;
+}
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.5); 
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1); 
+  }
+}
+
+
+@keyframes zoomOut {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
 }
