responsive done Depolyment-2

--- a/src/Component/Banner/banner.css
+++ b/src/Component/Banner/banner.css
@@ -60,9 +60,14 @@
     opacity: 0.5;
 }
 
-@media only screen and (max-width:980px) {
+@media only screen and (max-width:991px) {
     .bannerWrapper {
         width: 90%;
+    }
+
+    .imageContainer {
+        width: 350px;
+        height: 350px;
     }
 }
 
