--- a/src/Component/FoodCardHome/listFoodCard.css
+++ b/src/Component/FoodCardHome/listFoodCard.css
@@ -38,7 +38,7 @@
     flex: 1 1 50%;
     position: relative;
     padding: 30px;
-    min-width: 519px;
+    /* min-width: 519px; */
     gap: 15px;
     border-radius: 10px;
     display: flex;
@@ -48,7 +48,8 @@
 }
 
 .lisProductWrapper {
-    max-width: 49%;
+    width: 49%;
+    min-width: 400px;
 }
 
 .wrapper .img-area {
@@ -96,6 +97,7 @@
     margin: 10px 0;
     display: flex;
     gap: 8px;
+    align-items: center;
 }
 
 .priceTag h2 {
@@ -128,6 +130,124 @@
     color: #30344c;
 }
 
+.deleteItemIcon:hover {
+    color: #DA2C43;
+}
+
 .deleteItemIcon svg:hover {
     color: #ed6755;
+}
+
+@media only screen and (max-width:991px) {
+    .lisProductWrapper {
+        width: 100%;
+        min-width: 100%;
+    }
+
+    .lisProductWrapper .wrapper {
+        gap: 10%;
+    }
+
+    .foodCardHolder {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width:680px) {
+    .lisProductWrapper {
+        width: 100%;
+        min-width: 100%;
+    }
+
+    .lisProductWrapper .wrapper {
+        gap: 7%;
+        padding: 10px;
+        min-width: unset !important;
+    }
+
+    .wrapper .img-area {
+        width: 120px;
+        height: 120px;
+    }
+}
+
+@media only screen and (max-width:480px) {
+    .secondArea h2 {
+        font-size: 13px;
+    }
+
+    .secondArea p {
+        font-size: 10px;
+    }
+
+    .wrapper .img-area {
+        width: 100px;
+        height: 100px;
+    }
+
+    .priceTag h1 {
+        font-size: 15px;
+    }
+
+    .img-area .inner-area {
+        height: calc(100% - 15px);
+        width: calc(100% - 15px);
+    }
+}
+
+@media only screen and (max-width:991px) {
+    .lisProductWrapper {
+        width: 100%;
+        min-width: 100%;
+    }
+
+    .lisProductWrapper .wrapper {
+        gap: 10%;
+    }
+
+    .foodCardHolder {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width:680px) {
+    .lisProductWrapper {
+        width: 100%;
+        min-width: 100%;
+    }
+
+    .lisProductWrapper .wrapper {
+        gap: 7%;
+        padding: 10px;
+        min-width: unset !important;
+    }
+
+    .wrapper .img-area {
+        width: 120px;
+        height: 120px;
+    }
+}
+
+@media only screen and (max-width:480px) {
+    .secondArea h2 {
+        font-size: 13px;
+    }
+
+    .secondArea p {
+        font-size: 10px;
+    }
+
+    .wrapper .img-area {
+        width: 100px;
+        height: 100px;
+    }
+
+    .priceTag h1 {
+        font-size: 15px;
+    }
+
+    .img-area .inner-area {
+        height: calc(100% - 15px);
+        width: calc(100% - 15px);
+    }
 }
