--- a/src/Component/ProductDescCard/productDescCard.css
+++ b/src/Component/ProductDescCard/productDescCard.css
@@ -278,3 +278,43 @@
     align-items: center;
     margin: 10px auto;
 }
+
+@media only screen and (max-width:400px) {
+    .productDescWrapper .wrapper {
+        width: 350px;
+    }
+
+    .productDescWrapper .wrapper .img-area {
+        height: 250px !important;
+    }
+
+    .productDescWrapper .wrapper .about {
+        font-size: 12px;
+        text-align: center;
+    }
+
+    .productDescWrapper .social-icons p {
+        font-size: 10px;
+    }
+
+    .productDescWrapper .wrapper .buttons {
+        margin: 6px 0 !important;
+    }
+
+    .productDescWrapper .buttons button {
+        padding: 6px 0;
+        font-size: 10px;
+    }
+
+    .productDescWrapper .buttons svg {
+        font-size: 10px !important;
+    }
+
+    .productDescWrapper .buttons span {
+        font-size: 13px !important;
+    }
+
+    .selectionBtn {
+        gap: 3px;
+    }
+}
