--- a/src/Component/OrderCart/orderCart.css
+++ b/src/Component/OrderCart/orderCart.css
@@ -16,10 +16,11 @@
     flex-wrap: wrap;
     flex-direction: column;
     gap: 1rem;
-    justify-content: center;
     max-height: 100vh;
     overflow: scroll;
     padding: 10px;
+    width: 60%;
+    margin: 10px 0;
 }
 
 .NoContent h1 {
@@ -129,6 +130,10 @@
     min-width: 400px;
 }
 
+.listProductWrapper {
+    width: 100%;
+}
+
 
 @media only screen and (max-width:991px) {
     .cartContentHolder {
@@ -136,6 +141,11 @@
         justify-content: center;
         align-items: center;
         gap: 2rem;
+    }
+
+    .ListOfOrders {
+        width: 100%;
+        max-height: 70vh;
     }
 
     .OrderSummary {
@@ -172,7 +182,7 @@
 @media only screen and (max-width:420px) {
     .OrderSummary {
         min-width: unset;
-        width: 94vw;
+        width: 100vw;
     }
 
     .NoContent h1 {
