--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,10 @@ a {
   animation: zoomIn 0.3s ease forwards;
 }
 
+button:disabled{
+  cursor: not-allowed;
+}
+
 @keyframes zoomIn {
   0% {
     opacity: 0;
