--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   background: #ecf0f3;
   overflow-x: hidden;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 p,
@@ -71,6 +72,7 @@ a {
 
 button:disabled{
   cursor: not-allowed;
+  opacity: 0.5;
 }
 
 @keyframes zoomIn {
