--- a/src/Component/ProductDescCard/productDescCard.css
+++ b/src/Component/ProductDescCard/productDescCard.css
@@ -279,6 +279,10 @@
     margin: 10px auto;
 }
 
+.productDescWrapper .buttons button:disabled{
+    cursor: not-allowed;
+}
+
 @media only screen and (max-width:400px) {
     .productDescWrapper .wrapper {
         width: 350px;
