--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -1,10 +1,9 @@
 .nav-container {
-    background-color: #ebf0f3;
+    background-color: #f9f7f3;
     padding: 17px 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
     position: sticky;
     top: 0;
     left: 0;
