--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,14 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
-  background: #ecf0f3;
+  background: #fff;
   overflow-x: hidden;
   box-sizing: border-box;
+  /* font-family: "Nunito Sans", sans-serif; */
 }
 
 p,
@@ -65,18 +67,19 @@ a {
   background: rgba(0, 0, 0, 0.73);
 }
 
-.productDescWrapper{
+.productDescWrapper {
   animation: zoomIn 0.3s ease forwards;
 }
 
 @keyframes zoomIn {
   0% {
     opacity: 0;
-    transform: scale(0.5); 
+    transform: scale(0.5);
   }
+
   100% {
     opacity: 1;
-    transform: scale(1); 
+    transform: scale(1);
   }
 }
 
@@ -86,6 +89,7 @@ a {
     opacity: 1;
     transform: scale(1);
   }
+
   100% {
     opacity: 0;
     transform: scale(0.5);
