--- a/src/Component/Filter/filterNav.css
+++ b/src/Component/Filter/filterNav.css
@@ -66,6 +66,8 @@
     display: flex;
     gap: 10px;
     padding: 0 3px;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .filters li {
@@ -79,7 +81,13 @@
     color: #4e5079;
     font-family: "Nunito Sans", sans-serif;
     font-size: 14px;
-    min-width: fit-content;
+    min-width: max-content;
+}
+
+.filters a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .filters li:hover {
