--- a/src/Component/OrderCart/orderCart.css
+++ b/src/Component/OrderCart/orderCart.css
@@ -23,9 +23,25 @@
     margin: 10px 0;
 }
 
+.NoContent svg {
+    width: 300px;
+}
+
+.NoContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2rem 0;
+}
+
 .NoContent h1 {
-    font-size: 3.7rem;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 1.6rem;
+    text-align: center;
+    margin: 16px 0;
     opacity: 0.5;
+    font-weight: 400;
 }
 
 .OrderSummary h1 {
@@ -38,7 +54,7 @@
 }
 
 .OrderSummary {
-    width: 360px;
+    width: 400px;
 }
 
 .summaryDesc {
@@ -167,7 +183,7 @@
     }
 
     .NoContent h1 {
-        font-size: 3rem;
+        font-size: 1.4rem;
     }
 
     .deleteItemIcon {
@@ -176,6 +192,10 @@
 
     .deleteItemIcon span {
         display: none;
+    }
+
+    .NoContent svg {
+        width: 200px;
     }
 }
 
@@ -186,6 +206,10 @@
     }
 
     .NoContent h1 {
-        font-size: 2.6rem;
+        font-size: 1rem;
+    }
+
+    .NoContent svg {
+        width: 180px;
     }
 }
