--- a/src/Component/Popup/Popup.css
+++ b/src/Component/Popup/Popup.css
@@ -8,17 +8,20 @@
     width: 100%;
     background: #000000bd;
     backdrop-filter: blur(12px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content {
     position: relative;
     position: relative;
     position: relative;
-    margin: 5rem auto;
+    margin: 0rem auto;
     width: 330px;
     padding: 60px;
     border-radius: 10px;
-    background: #ecf0f3;
+    background: #f9f7f3;
     box-shadow: 3px 3px 60px #00000070;
 }
 
@@ -36,6 +39,8 @@
     width: 100%;
     display: flex;
     position: relative;
+    border: .0625rem solid rgb(221 221 221 / 62%);
+    border-radius: 10px;
 }
 
 .field:nth-child(2) {
@@ -48,13 +53,10 @@
     padding-left: 45px;
     outline: none;
     border: none;
-    font-size: 14px;
-    background: #ecf0f3;
-    background: #ecf0f3;
+    font-size: 13px;
+    background: transparent;
     color: black;
     border-radius: 10px;
-    box-shadow: inset 2px 2px 5px #BABECC,
-        inset -5px -5px 10px #ffffff73;
 }
 
 .field .input:focus {
@@ -87,17 +89,17 @@
 .button {
     margin: 15px 0;
     width: 100%;
-    font-size: 15px;
-    padding: 15px 0;
-    background: #ebf0f3;
-    background: #ebf0f3;
+    font-size: 13px;
+    padding: 13px 0;
     border-radius: 10px;
     border: none;
     outline: none;
     cursor: pointer;
     border: 1px solid #e6e7ed;
-    color: #595959;
+    color: white;
     box-shadow: 2px 2px 5px #BABECC, -5px -5px 10px #ffffff73;
+    background-color: #ea755e;
+    border-color: #ea755e;
 }
 
 .button:focus {
@@ -109,23 +111,41 @@
 .sign-up {
     margin: 10px 0;
     color: #595959;
-    font-size: 14px;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     justify-content: center;
     flex-wrap: wrap;
 }
 
 .sign-up p {
-    font-size: 14px;
+    font-size: 13px;
+    font-family: "Nunito Sans", sans-serif;
 }
 
 .sign-up span {
-    color: #3498db;
-    font-size: 14px;
+    color: #ea755f;
+    font-size: 13px;
     text-decoration: none;
     cursor: pointer;
+    font-family: "Nunito Sans", sans-serif;
+}
+
+.singinContainer .field span {
+    line-height: unset;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: unset;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 14px;
+    color: #4e5079;
+}
+
+.singinContainer .field span svg {
+    font-size: 20px;
+    color: #4e5079;
 }
 
 .sign-up span:hover {
@@ -162,17 +182,16 @@
 .btn-singin {
     display: grid;
     place-items: center;
-    background: #e3edf7;
+    background: #f5f5f5;
     padding: 15px;
     border-radius: 10px;
-    box-shadow:
-        6px 6px 10px -1px rgba(0, 0, 0, 0.15),
-        -6px -6px 10px -1px rgba(255, 255, 255, 0.7);
+    box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15), -6px -6px 10px -1px rgba(255, 255, 255, 0.7);
     border: 1px solid rgba(0, 0, 0, 0);
     cursor: pointer;
     transition: transform 0.5s;
     border-radius: 50%;
-    border: 1px solid #e3edf7;
+    border: 1px solid #f9f7f3;
+    margin: 1rem 0;
 }
 
 .btn-singin:hover {
@@ -199,7 +218,7 @@
 
 @media only screen and (max-width:640px) {
     .content {
-        width: 70%;
-        padding: 40px;
+        width: 80%;
+        padding: 30px 20px;
     }
 }
