--- a/src/Component/ProductDescCard/productDescCard.css
+++ b/src/Component/ProductDescCard/productDescCard.css
@@ -83,6 +83,8 @@
     width: 100%;
     border-radius: 10px;
     object-fit: cover;
+    border-end-end-radius: 0;
+    border-end-start-radius: 0;
 }
 
 .productDescWrapper .wrapper .name {
@@ -162,6 +164,8 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
+    margin: 10px 0;
+    margin-bottom: 1rem;
 }
 
 .productDescWrapper .buttons button {
@@ -247,10 +251,6 @@
     gap: 10px;
 }
 
-.productDescWrapper .buttons {
-    margin: 10px 0 !important;
-}
-
 .productDescWrapper .buttons .selectionBtn span {
     font-family: Roboto;
     font-weight: 500;
@@ -279,17 +279,18 @@
     margin: 10px auto;
 }
 
-.productDescWrapper .buttons button:disabled{
+.productDescWrapper .buttons button:disabled {
     cursor: not-allowed;
 }
 
-@media only screen and (max-width:400px) {
+@media only screen and (max-width:480px) {
     .productDescWrapper .wrapper {
-        width: 350px;
+        width: 300px;
+        min-width: unset;
     }
 
     .productDescWrapper .wrapper .img-area {
-        height: 250px !important;
+        height: 200px !important;
     }
 
     .productDescWrapper .wrapper .about {
@@ -306,7 +307,7 @@
     }
 
     .productDescWrapper .buttons button {
-        padding: 6px 0;
+        padding: 12px 0;
         font-size: 10px;
     }
 
