--- a/src/Component/OrderCart/orderCart.css
+++ b/src/Component/OrderCart/orderCart.css
@@ -47,10 +47,13 @@
 .OrderSummary h1 {
     font-family: "Nunito Sans", sans-serif;
     text-align: center;
-    opacity: 0.7;
+    opacity: 0.8;
     border-bottom: 1px solid #00000021;
     padding: 10px 0;
     color: green;
+    font-size: 18px;
+    font-weight: 500;
+    color: #424767;
 }
 
 .OrderSummary {
@@ -58,7 +61,7 @@
 }
 
 .summaryDesc {
-    background: #ecf0f3;
+    background-color: #f9f7f3;
     box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1;
     padding: 20px;
     margin: 20px;
@@ -119,27 +122,6 @@
     background: #e58a01;
 }
 
-.headerPrimary {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 10px;
-    width: 70%;
-    margin: 1rem auto;
-    margin-bottom: 3rem;
-}
-
-.headerPrimary h1 {
-    font-size: 15px;
-}
-
-.headerPrimary p {
-    font-size: 12px;
-    opacity: 0.5;
-}
-
 .ListFoodCardWrapper {
     margin: 10px;
     width: 100%;
@@ -150,6 +132,9 @@
     width: 100%;
 }
 
+.cartWrapper .wrapper {
+    background: #f9f7f3 !important;
+}
 
 @media only screen and (max-width:991px) {
     .cartContentHolder {
@@ -167,19 +152,11 @@
     .OrderSummary {
         min-width: 400px;
     }
-
-    .headerPrimary {
-        width: 70vw;
-    }
 }
 
 @media only screen and (max-width:680px) {
     .cartWrapper {
         width: 90%;
-    }
-
-    .headerPrimary {
-        width: 100%;
     }
 
     .NoContent h1 {
