--- a/src/Component/Popup/Popup.css
+++ b/src/Component/Popup/Popup.css
@@ -41,10 +41,11 @@
     position: relative;
     border: .0625rem solid rgb(221 221 221 / 62%);
     border-radius: 10px;
+    margin-top: 10px;
 }
 
-.field:nth-child(2) {
-    margin-top: 20px;
+.field:first-child {
+    margin-top: 0px;
 }
 
 .field .input {
