--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 body {
@@ -67,7 +68,9 @@ a {
   background: rgba(0, 0, 0, 0.73);
 }
 
-.productDescWrapper, .singinContainer > .content, .cookiesContent{
+.productDescWrapper,
+.singinContainer>.content,
+.cookiesContent {
   animation: zoomIn 0.3s ease forwards;
 }
 
@@ -93,5 +96,40 @@ a {
   100% {
     opacity: 0;
     transform: scale(0.5);
+  }
+}
+
+
+.headerPrimary {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+  width: 70%;
+  margin: 1rem auto;
+  margin-bottom: 3rem;
+}
+
+.headerPrimary h1 {
+  font-size: 15px;
+}
+
+.headerPrimary p {
+  font-size: 12px;
+  opacity: 0.5;
+}
+
+
+@media only screen and (max-width:991px) {
+  .headerPrimary {
+    width: 70vw;
+  }
+}
+
+@media only screen and (max-width:680px) {
+  .headerPrimary {
+    width: 100%;
   }
 }
