--- a/src/Component/TermsAndCondition/TermsAndCondition.css
+++ b/src/Component/TermsAndCondition/TermsAndCondition.css
@@ -5,7 +5,7 @@
 .terms-head{
     width: 80%;
     margin: auto;
-    padding: 3rem 0;
+    padding: 3rem 0 2rem 0;
     /* font-size: 30px; */
     text-align: center;
 }
